[tool.poetry]
name = "aiogateway"
version = "0.1.0"
description = ""
authors = ["Kirill Churkin <k.churkin@bi.zone>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"
yarl = "^1.6.2"
aiosqlite = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
